[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Actor/Zombie/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Intersection/Hurtbox.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 10.3912
height = 17.7339

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 30
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 424, 0, 37, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vision"]
polygon = PoolVector2Array( -16, -24, 320, -128, 352, -64, 368, 0, 352, 64, 320, 128, -16, 24 )

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 8.8627, -1.52588e-05 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_ChaseTimer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_Hurtbox_body_exited"]

[editable path="Hurtbox"]
