[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Zombie/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Zombie/ZoneDetect.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=3]
height = 7.5

[sub_resource type="CircleShape2D" id=2]
radius = 67.6872

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 424, 0, 37, 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 3 )

[node name="ZoneDetect" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="ZoneDetect" index="0"]
modulate = Color( 0.054902, 0.956863, 0.831373, 0.282353 )
position = Vector2( 83, 0 )
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[editable path="ZoneDetect"]
